# cmd/am2server/internal/user/user.sql.go
@@ -11,20 +11,6 @@ import (
 	"time"
 )
 
-const addFavoriteCapture = `-- name: AddFavoriteCapture :execresult
-INSERT INTO user_favorite(user_id, capture_id) VALUES(?,?)
-`
-
-type AddFavoriteCaptureParams struct {
-	UserID    int64
-	CaptureID int64
-}
-
-// http: POST /users/{user_id}/captures/{capture_id}
-func (q *Queries) AddFavoriteCapture(ctx context.Context, arg AddFavoriteCaptureParams) (sql.Result, error) {
-	return q.db.ExecContext(ctx, addFavoriteCapture, arg.UserID, arg.CaptureID)
-}
-
 const contUsers = `-- name: ContUsers :one
 SELECT count(*) FROM user
 `
@@ -57,76 +43,18 @@ func (q *Queries) GetUserByEmail(ctx context.Context, email string) (User, error
 	return i, err
 }
 
-const listFavoriteCaptures = `-- name: ListFavoriteCaptures :many
-SELECT c.id, c.name, c.description, c.downloads, c.has_cab, c.type, c.created_at, c.demo_link
-FROM user_favorite uf, capture c
-WHERE uf.capture_id = c.id AND uf.user_id = ?
-ORDER BY uf.created_at DESC
-LIMIT ? OFFSET ?
+const addFavoriteCapture = `-- name: addFavoriteCapture :execresult
+INSERT INTO user_favorite(user_id, capture_id) VALUES(?,?)
 `
 
-type ListFavoriteCapturesParams struct {
-	UserID int64
-	Limit  int64
-	Offset int64
-}
-
-type ListFavoriteCapturesRow struct {
-	ID          int64
-	Name        string
-	Description sql.NullString
-	Downloads   int64
-	HasCab      sql.NullBool
-	Type        string
-	CreatedAt   time.Time
-	DemoLink    sql.NullString
-}
-
-// http: GET /users/{user_id}/captures
-func (q *Queries) ListFavoriteCaptures(ctx context.Context, arg ListFavoriteCapturesParams) ([]ListFavoriteCapturesRow, error) {
-	rows, err := q.db.QueryContext(ctx, listFavoriteCaptures, arg.UserID, arg.Limit, arg.Offset)
-	if err != nil {
-		return nil, err
-	}
-	defer rows.Close()
-	var items []ListFavoriteCapturesRow
-	for rows.Next() {
-		var i ListFavoriteCapturesRow
-		if err := rows.Scan(
-			&i.ID,
-			&i.Name,
-			&i.Description,
-			&i.Downloads,
-			&i.HasCab,
-			&i.Type,
-			&i.CreatedAt,
-			&i.DemoLink,
-		); err != nil {
-			return nil, err
-		}
-		items = append(items, i)
-	}
-	if err := rows.Close(); err != nil {
-		return nil, err
-	}
-	if err := rows.Err(); err != nil {
-		return nil, err
-	}
-	return items, nil
-}
-
-const removeFavoriteCapture = `-- name: RemoveFavoriteCapture :execresult
-DELETE FROM user_favorite WHERE user_id = ? AND capture_id = ?
-`
-
-type RemoveFavoriteCaptureParams struct {
+type addFavoriteCaptureParams struct {
 	UserID    int64
 	CaptureID int64
 }
 
-// http: DELETE /users/{user_id}/captures/{capture_id}
-func (q *Queries) RemoveFavoriteCapture(ctx context.Context, arg RemoveFavoriteCaptureParams) (sql.Result, error) {
-	return q.db.ExecContext(ctx, removeFavoriteCapture, arg.UserID, arg.CaptureID)
+// http: POST /users/{user_id}/captures/{capture_id}
+func (q *Queries) addFavoriteCapture(ctx context.Context, arg addFavoriteCaptureParams) (sql.Result, error) {
+	return q.db.ExecContext(ctx, addFavoriteCapture, arg.UserID, arg.CaptureID)
 }
 
 const addUser = `-- name: addUser :execresult
@@ -187,6 +115,78 @@ func (q *Queries) getUser(ctx context.Context, id int64) (User, error) {
 		&i.Picture,
 	)
 	return i, err
+}
+
+const listFavoriteCaptures = `-- name: listFavoriteCaptures :many
+SELECT c.id, c.name, c.description, c.downloads, c.has_cab, c.type, c.created_at, c.demo_link
+FROM user_favorite uf, capture c
+WHERE uf.capture_id = c.id AND uf.user_id = ?
+ORDER BY uf.created_at DESC
+LIMIT ? OFFSET ?
+`
+
+type listFavoriteCapturesParams struct {
+	UserID int64
+	Limit  int64
+	Offset int64
+}
+
+type listFavoriteCapturesRow struct {
+	ID          int64
+	Name        string
+	Description sql.NullString
+	Downloads   int64
+	HasCab      sql.NullBool
+	Type        string
+	CreatedAt   time.Time
+	DemoLink    sql.NullString
+}
+
+// http: GET /users/{user_id}/captures
+func (q *Queries) listFavoriteCaptures(ctx context.Context, arg listFavoriteCapturesParams) ([]listFavoriteCapturesRow, error) {
+	rows, err := q.db.QueryContext(ctx, listFavoriteCaptures, arg.UserID, arg.Limit, arg.Offset)
+	if err != nil {
+		return nil, err
+	}
+	defer rows.Close()
+	var items []listFavoriteCapturesRow
+	for rows.Next() {
+		var i listFavoriteCapturesRow
+		if err := rows.Scan(
+			&i.ID,
+			&i.Name,
+			&i.Description,
+			&i.Downloads,
+			&i.HasCab,
+			&i.Type,
+			&i.CreatedAt,
+			&i.DemoLink,
+		); err != nil {
+			return nil, err
+		}
+		items = append(items, i)
+	}
+	if err := rows.Close(); err != nil {
+		return nil, err
+	}
+	if err := rows.Err(); err != nil {
+		return nil, err
+	}
+	return items, nil
+}
+
+const removeFavoriteCapture = `-- name: removeFavoriteCapture :execresult
+DELETE FROM user_favorite WHERE user_id = ? AND capture_id = ?
+`
+
+type removeFavoriteCaptureParams struct {
+	UserID    int64
+	CaptureID int64
+}
+
+// http: DELETE /users/{user_id}/captures/{capture_id}
+func (q *Queries) removeFavoriteCapture(ctx context.Context, arg removeFavoriteCaptureParams) (sql.Result, error) {
+	return q.db.ExecContext(ctx, removeFavoriteCapture, arg.UserID, arg.CaptureID)
 }
 
 const updateUserName = `-- name: updateUserName :execresult
